Use light nav bar on Player screen where available.

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -97,8 +97,8 @@
 
     <style name="Plaid.Translucent.Dribbble.Player">
         <item name="android:windowDrawsSystemBarBackgrounds">true</item>
-        <item name="android:statusBarColor">@color/light_immersive_bars</item>
-        <item name="android:navigationBarColor">@color/immersive_bars</item>
+        <item name="android:statusBarColor">@color/light_status_bar</item>
+        <item name="android:navigationBarColor">@color/light_nav_bar</item>
         <item name="android:windowLightStatusBar">true</item>
         <item name="android:windowAllowEnterTransitionOverlap">true</item>
         <item name="android:windowAllowReturnTransitionOverlap">true</item>
